@@ -19,84 +19,91 @@ void StepperQueue::init(uint8_t queue_num, uint8_t step_pin) {
   digitalWrite(step_pin, LOW);
   pinMode(step_pin, OUTPUT);
   if (step_pin == stepPinStepperA) {
+    isChannelA = true;
     noInterrupts();
-    OCR1A = 32768;  // definite start point
     Stepper_Disconnect(A);
-    TCCR1C = _BV(FOC1A);    // force compare to ensure disconnect
-    TIFR1 = _BV(OCF1A);     // clear interrupt flag
-    TIMSK1 |= _BV(OCIE1A);  // enable compare A interrupt
+    TCCR1C = _BV(FOC1A);     // force compare to ensure disconnect
+    TIMSK1 &= ~_BV(OCIE1A);  // disable compare A interrupt
     interrupts();
   }
   if (step_pin == stepPinStepperB) {
+    isChannelA = false;
     noInterrupts();
-    OCR1B = 32768;  // definite start point
     Stepper_Disconnect(B);
-    TCCR1C = _BV(FOC1B);    // force compare to ensure disconnect
-    TIFR1 = _BV(OCF1B);     // clear interrupt flag
-    TIMSK1 |= _BV(OCIE1B);  // enable compare B interrupt
+    TCCR1C = _BV(FOC1B);     // force compare to ensure disconnect
+    TIMSK1 &= ~_BV(OCIE1B);  // disable compare B interrupt
     interrupts();
   }
 }
 
-#define AVR_STEPPER_ISR(CHANNEL, queue, ocr, foc)                         \
-  ISR(TIMER1_COMP##CHANNEL##_vect) {                                      \
-    if (queue.skip) {                                                     \
-      if ((--queue.skip) == 0) {                                          \
-        Stepper_Toggle(CHANNEL);                                          \
-      }                                                                   \
-      ocr += PERIOD_TICKS;                                                \
-      return;                                                             \
-    }                                                                     \
-    uint8_t rp = queue.read_idx;                                          \
-    if (Stepper_IsToggling(CHANNEL)) {                                    \
-      TCCR1C = _BV(foc); /* clear bit */                                  \
-      struct queue_entry* e = &queue.entry[rp & QUEUE_LEN_MASK];          \
-      if ((e->steps -= 2) > 1) {                                          \
-        /* perform another step with this queue entry */                  \
-        ocr += queue.period;                                              \
-        /* assign to skip and test for not zero */                        \
-        if (0 != (queue.skip = e->n_periods)) {                           \
-          Stepper_Zero(CHANNEL);                                          \
-        }                                                                 \
-        return;                                                           \
-      }                                                                   \
-      rp++;                                                               \
-      queue.read_idx = rp;                                                \
-      if (rp == queue.next_write_idx) {                                   \
-        /* queue is empty => set to disconnect */                         \
-        Stepper_Disconnect(CHANNEL);                                      \
-        queue.isRunning = false;                                          \
-        queue.ticks_at_queue_end = TICKS_FOR_STOPPED_MOTOR;               \
-        /* Next Interrupt takes place at next timer cycle => ~4ms */      \
-        return;                                                           \
-      }                                                                   \
-    } else {                                                              \
-      /* If reach here, then stepper is idle and waiting for a command */ \
-      if (rp == queue.next_write_idx) {                                   \
-        /* Next Interrupt takes place at next timer cycle => ~4ms */      \
-        return;                                                           \
-      }                                                                   \
-    }                                                                     \
-    /* command in queue */                                                \
-    struct queue_entry* e = &queue.entry[rp & QUEUE_LEN_MASK];            \
-    ocr += (queue.period = e->period);                                    \
-    /* assign to skip and test for not zero */                            \
-    if (0 != (queue.skip = e->n_periods)) {                               \
-      Stepper_Zero(CHANNEL);                                              \
-    } else {                                                              \
-      Stepper_Toggle(CHANNEL);                                            \
-    }                                                                     \
-    uint8_t steps = e->steps;                                             \
-    if ((steps & 0x01) != 0) {                                            \
-      digitalWrite(queue.dirPin,                                          \
-                   digitalRead(queue.dirPin) == HIGH ? LOW : HIGH);       \
-    }                                                                     \
+#define AVR_STEPPER_ISR(CHANNEL, queue, ocr, foc)                   \
+  ISR(TIMER1_COMP##CHANNEL##_vect) {                                \
+    if (queue.skip) {                                               \
+      if ((--queue.skip) == 0) {                                    \
+        Stepper_Toggle(CHANNEL);                                    \
+      }                                                             \
+      ocr += PERIOD_TICKS;                                          \
+      return;                                                       \
+    }                                                               \
+    uint8_t rp = queue.read_idx;                                    \
+    if (Stepper_IsToggling(CHANNEL)) {                              \
+      TCCR1C = _BV(foc); /* clear bit */                            \
+      struct queue_entry* e = &queue.entry[rp & QUEUE_LEN_MASK];    \
+      if ((e->steps -= 2) > 1) {                                    \
+        /* perform another step with this queue entry */            \
+        ocr += queue.period;                                        \
+        /* assign to skip and test for not zero */                  \
+        if (0 != (queue.skip = e->n_periods)) {                     \
+          Stepper_Zero(CHANNEL);                                    \
+        }                                                           \
+        return;                                                     \
+      }                                                             \
+      rp++;                                                         \
+      queue.read_idx = rp;                                          \
+    }                                                               \
+    if (rp == queue.next_write_idx) {                               \
+      /* queue is empty => set to disconnect */                     \
+      Stepper_Disconnect(CHANNEL);                                  \
+      /* disable compare interrupt */                               \
+      TIMSK1 &= ~_BV(OCIE1##CHANNEL);                               \
+      /* force compare to ensure disconnect */                      \
+      TCCR1C = _BV(FOC1##CHANNEL);                                  \
+      queue.isRunning = false;                                      \
+      queue.ticks_at_queue_end = TICKS_FOR_STOPPED_MOTOR;           \
+      return;                                                       \
+    }                                                               \
+    /* command in queue */                                          \
+    struct queue_entry* e = &queue.entry[rp & QUEUE_LEN_MASK];      \
+    ocr += (queue.period = e->period);                              \
+    /* assign to skip and test for not zero */                      \
+    if (0 != (queue.skip = e->n_periods)) {                         \
+      Stepper_Zero(CHANNEL);                                        \
+    } else {                                                        \
+      Stepper_Toggle(CHANNEL);                                      \
+    }                                                               \
+    uint8_t steps = e->steps;                                       \
+    if ((steps & 0x01) != 0) {                                      \
+      digitalWrite(queue.dirPin,                                    \
+                   digitalRead(queue.dirPin) == HIGH ? LOW : HIGH); \
+    }                                                               \
   }
 AVR_STEPPER_ISR(A, fas_queue_A, OCR1A, FOC1A)
 AVR_STEPPER_ISR(B, fas_queue_B, OCR1B, FOC1B)
 
-bool StepperQueue::startQueue(struct queue_entry* e) {
+void StepperQueue::startQueue() {
   isRunning = true;
-  return false;
+  if (isChannelA) {
+    noInterrupts();
+    TIFR1 = _BV(OCF1A);     // clear interrupt flag
+    TIMSK1 |= _BV(OCIE1A);  // enable compare A interrupt
+    OCR1A = TCNT1 + 40;     // definite start point
+    interrupts();
+  } else {
+    noInterrupts();
+    TIFR1 = _BV(OCF1B);     // clear interrupt flag
+    TIMSK1 |= _BV(OCIE1B);  // enable compare A interrupt
+    OCR1B = TCNT1 + 40;     // definite start point
+    interrupts();
+  }
 }
 #endif
